--- a/styles/style.css
+++ b/styles/style.css
@@ -27,4 +27,12 @@ body{
     text-align: center;
     text-transform: capitalize;
 }
+.music-name{
+    font-size: 40px;
+    font-weight: 500;
+    margin-bottom: 10px;
+}
+.artist-name{
+    font-size: 20px;
+}
 
