--- a/styles/style.css
+++ b/styles/style.css
@@ -56,6 +56,38 @@ body{
     width: 30px;
     height: 30px;
     border-radius: 50%;
-    background:#FDF6EC ;
+    background:#D7CCC8 ;
 }
 
+.song-slider{
+    width: 100%;
+    position: relative;
+}
+
+.seek-bar{
+    -webkit-appearance: none;
+    width: 100%;
+    height: 5px;
+    border-radius: 10px;
+    background: #D7CCC8;
+    overflow: hidden;
+    cursor: pointer;
+}
+
+.seek-bar::-webkit-slider-thumb{
+    -webkit-appearance: none;
+    width: 1px;
+    height: 20px;
+    background: #8D6E63;
+    box-shadow: -400px 0 0 400px #7e4941 ;
+}
+
+.current-time,
+.song-duration{
+    font-size: 14px;
+}
+
+.song-duration{
+    position: absolute;
+    right: 0;
+}
